--- a/_layouts/page.html
+++ b/_layouts/page.html
@@ -41,6 +41,9 @@ layout: default
       <!-- Short About -->
       {% include short-about.html %}
 
+      <!-- hitokoto -->
+      {% include hitokoto.html %}
+
       <!-- Friends Blog -->
       {% include friends.html %}
 
