--- a/_includes/head.html
+++ b/_includes/head.html
@@ -6,7 +6,10 @@
     <meta name="description" content="{{ site.description }}">
     <meta name="keywords" content="{{ site.keyword }}">
     <meta name="theme-color" content="{{ site.chrome-tab-theme-color }}">
-
+    
+    <!-- add baidu zhanzhang !-->
+    <meta name="baidu-site-verification" content="code-HbyKSkU29Y" />
+    
     <!-- Open Graph -->
     <meta property="og:title"
         content="{% if page.title %}{{ page.title }} - {{ site.SEOTitle }}{% else %}{{ site.SEOTitle }}{% endif %}">
@@ -80,5 +83,4 @@
             s.parentNode.insertBefore(hm, s);
         })();
     </script>
-
 </head>
