update random home-bg and change hitokoto pos

--- a/_includes/hitokoto.html
+++ b/_includes/hitokoto.html
@@ -1,8 +1,7 @@
 <hr>
-<h5><i class="ui quote left icon"></i>一言（ヒトコト）</h5>
+<h5>一言（ヒトコト）</h5>
 <div id="hitokoto_text" style="color: rgb(102, 102, 102);"></div>
-<div style="text-align: right; margin-top: 15px; font-size: 0.9em; " id="hitokoto_from">123
-</div>
+<div style="text-align: right; margin-top: 15px; font-size: 0.9em; " id="hitokoto_from"></div>
 <script>
     fetch('https://v1.hitokoto.cn/?c=a&c=b&c=d&c=i&c=k')
         .then(response => response.json())
