--- a/_includes/intro-header.html
+++ b/_includes/intro-header.html
@@ -98,7 +98,7 @@
 {% if page.header-img %}
 <header class="intro-header" style="background-image: url('{{ site.baseurl }}/{{ page.header-img }}')">
 {% else %}
-<header class="intro-header" id="randombg" style="background-image: url('')">
+<header class="intro-header" id="randombg" style="background-image: url('{{ site.baseurl }}/{{ site.header-img }}')">
 {% endif %}   
     <script>
         var x=Math.floor(Math.random() * 12)
