--- a/_includes/intro-header.html
+++ b/_includes/intro-header.html
@@ -98,14 +98,24 @@
 {% if page.header-img %}
 <header class="intro-header" style="background-image: url('{{ site.baseurl }}/{{ page.header-img }}')">
 {% else %}
+<!--
 <header class="intro-header" id="randombg" style="background-image: url('{{ site.baseurl }}/{{ site.header-img }}')">
-{% endif %}   
+!-->
+<script>
+    var x=Math.floor(Math.random() * 13)
+    var str=x.toString()
+    var bg='/img/bg/image_'+str+'.jpg'
+    document.write('<header class="intro-header" style="background-image: url('+bg+')">')
+</script>
+    <!--
     <script>
         var x=Math.floor(Math.random() * 1)
         var str=x.toString()
         var bg='/img/bg/image_'+str+'.jpg'
         document.getElementById('randombg').style.background='url('+bg+')'
     </script>
+    -->
+{% endif %} 
     <div class="header-mask"></div>
   <div class="container">
     <div class="row">
