--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -16,7 +16,20 @@
                         src="https://ghbtns.com/github-btn.html?user=tLLWtG&repo=tLLWtG.github.io&type=star&count=true">
                         </iframe>
                     -->
+                    <br>
+                    <span id="busuanzi_container_site_pv" style="display: inline;">
+                        总访问量
+                        <span id="busuanzi_value_site_pv">11</span>
+                        次
+                    </span>
+                    <span id="busuanzi_container_site_uv" style="display: inline;">
+                        | 总访客数
+                        <span id="busuanzi_value_site_uv">1</span>
+                        人
+                    </span>
                 </p>
+                <script async src="//busuanzi.ibruce.info/busuanzi/2.3/busuanzi.pure.mini.js">
+                </script>
             </div>
         </div>
     </div>
