--- a/_includes/hitokoto.html
+++ b/_includes/hitokoto.html
@@ -1,6 +1,8 @@
 <hr />
 <h5 style="display: inline">一言（ヒトコト）</h5>
-<div style="display: inline; font-size: 1.5em; color: #a3a3a3">|&nbsp</div>
+<div style="display: inline; font-size: 1.5em; color: #a3a3a3">
+  &nbsp;&nbsp;&nbsp;&nbsp;|&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
+</div>
 <div
   title="redo"
   id="redo icon"
