--- a/_includes/hitokoto.html
+++ b/_includes/hitokoto.html
@@ -18,22 +18,69 @@
   style="text-align: right; margin-top: 15px; font-size: 0.9em"
   id="hitokoto_from"
 ></div>
+<style>
+  .containerload {
+    width: 100%;
+    height: 100%;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    background-color: #fff;
+  }
+
+  .itemload {
+    width: 12px;
+    height: 60px;
+    margin: 2px;
+    background-color: #ccc;
+    animation: wave 1.2s infinite ease-in-out;
+    animation-delay: var(--delay);
+  }
+
+  @keyframes wave {
+    0%,
+    40%,
+    100% {
+      transform: scale(0.4);
+    }
+    20% {
+      transform: scale(1);
+    }
+  }
+</style>
+<div class="containerload">
+  <span class="rand1" id="load1" style="--delay: -1.1s"></span>
+  <span class="rand2" id="load2" style="--delay: -1s"></span>
+  <span class="rand3" id="load3" style="--delay: -0.9s"></span>
+  <span class="rand4" id="load4" style="--delay: -0.8s"></span>
+  <span class="rand5" id="load5" style="--delay: -0.7s"></span>
+</div>
 <script>
-  fetch("https://v1.hitokoto.cn/?c=a&c=b&c=d&c=i&c=k")
-    .then((response) => response.json())
-    .then((data) => {
-      const hitokoto_text = document.getElementById("hitokoto_text");
-      hitokoto_text.href = "https://hitokoto.cn/?uuid=" + data.uuid;
-      hitokoto_text.innerText = data.hitokoto;
-      const hitokoto_from = document.getElementById("hitokoto_from");
-      hitokoto_from.href = "https://hitokoto.cn/?uuid=" + data.uuid;
-      hitokoto_from.innerText = "——" + data.from;
-    })
-    .catch(console.error);
-</script>
-<script>
-  const redo = document.getElementById("redo icon");
-  redo.addEventListener("click", (e) => {
+  function loading_on() {
+    const load1 = document.getElementById("load1");
+    const load2 = document.getElementById("load2");
+    const load3 = document.getElementById("load3");
+    const load4 = document.getElementById("load4");
+    const load5 = document.getElementById("load5");
+    load1.className = "itemload item1";
+    load2.className = "itemload item2";
+    load3.className = "itemload item3";
+    load4.className = "itemload item4";
+    load5.className = "itemload item5";
+  }
+  function loading_off() {
+    const load1 = document.getElementById("load1");
+    const load2 = document.getElementById("load2");
+    const load3 = document.getElementById("load3");
+    const load4 = document.getElementById("load4");
+    const load5 = document.getElementById("load5");
+    load1.className = "rand1";
+    load2.className = "rand2";
+    load3.className = "rand3";
+    load4.className = "rand4";
+    load5.className = "rand5";
+  }
+  function gethitokoto() {
     fetch("https://v1.hitokoto.cn/?c=a&c=b&c=d&c=i&c=k")
       .then((response) => response.json())
       .then((data) => {
@@ -45,6 +92,20 @@
         hitokoto_from.innerText = "——" + data.from;
       })
       .catch(console.error);
+    setTimeout(loading_off, 1);
+    //loading_off();
+  }
+
+  gethitokoto();
+  const redo = document.getElementById("redo icon");
+  redo.addEventListener("click", (e) => {
+    const hitokoto_text = document.getElementById("hitokoto_text");
+    hitokoto_text.innerText = "";
+    const hitokoto_from = document.getElementById("hitokoto_from");
+    hitokoto_from.innerText = "";
+    // loading
+    loading_on();
+    setTimeout(gethitokoto, 800);
   });
   redo.addEventListener("mouseover", (e) => {
     redo.style.cursor = "pointer";
