--- a/_includes/hitokoto.html
+++ b/_includes/hitokoto.html
@@ -49,11 +49,11 @@
   }
 </style>
 <div class="containerload">
-  <span class="rand1" id="load1" style="--delay: -1.1s"></span>
-  <span class="rand2" id="load2" style="--delay: -1s"></span>
-  <span class="rand3" id="load3" style="--delay: -0.9s"></span>
-  <span class="rand4" id="load4" style="--delay: -0.8s"></span>
-  <span class="rand5" id="load5" style="--delay: -0.7s"></span>
+  <span class="itemload item1" id="load1" style="--delay: -1.1s"></span>
+  <span class="itemload item2" id="load2" style="--delay: -1s"></span>
+  <span class="itemload item3" id="load3" style="--delay: -0.9s"></span>
+  <span class="itemload item4" id="load4" style="--delay: -0.8s"></span>
+  <span class="itemload item5" id="load5" style="--delay: -0.7s"></span>
 </div>
 <script>
   function loading_on() {
@@ -94,8 +94,8 @@
       })
       .catch(console.error);
   }
-
-  gethitokoto();
+  //loading_on();
+  setTimeout(gethitokoto, 800);
   const redo = document.getElementById("redo icon");
   redo.addEventListener("click", (e) => {
     const hitokoto_text = document.getElementById("hitokoto_text");
