--- a/_includes/hitokoto.html
+++ b/_includes/hitokoto.html
@@ -108,7 +108,7 @@
   });
   redo.addEventListener("mouseover", (e) => {
     redo.style.cursor = "pointer";
-    redo.style.color = "rgb(100, 100, 100)";
+    redo.style.color = "#0085a1";
   });
   redo.addEventListener("mouseout", (e) => {
     redo.style.color = "#a3a3a3";
