--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -7,9 +7,9 @@
                 {% include sns-links.html center=true %}
 
                 <p class="copyright text-muted">
-                    Copyright &copy; {{ site.title }} {{ site.time | date: '%Y' }}
+                    Copyright &copy; {{ site.title }} 2022-{{ site.time | date: '%Y' }}
                     <br>
-                    Powered by <a href="https://github.com/Huxpro/huxpro.github.io">Huxpro</a>
+                    Based on <a href="https://github.com/Huxpro/huxpro.github.io">Huxpro</a>
                     <!--
                         <iframe style="margin-left: 2px; margin-bottom:-5px;" frameborder="0" scrolling="0" width="100px"
                         height="20px"
