--- a/_includes/head.html
+++ b/_includes/head.html
@@ -21,6 +21,12 @@
 
     gtag("config", "G-YFKQL2YEMC");
   </script>
+  <!-- add google adsense-->
+  <script
+    async
+    src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-8547424531148298"
+    crossorigin="anonymous"
+  ></script>
 
   <meta
     name="viewport"
