--- a/_includes/featured-tags.html
+++ b/_includes/featured-tags.html
@@ -6,9 +6,9 @@
 
 {% if site.featured-tags %}
 <section>
-    {% if include.bottom %}
+    <!-- {% if include.bottom %}
     <hr class="hidden-sm hidden-xs">
-    {% endif %}
+    {% endif %} -->
     <h5><a href="{{'/archive/' | prepend: site.baseurl }}">FEATURED TAGS</a></h5>
     <div class="tags">
         {% capture tags %}
