--- a/_layouts/page.html
+++ b/_layouts/page.html
@@ -42,14 +42,14 @@ layout: default
       <!-- hitokoto -->
       {% include hitokoto.html %}
 
-      <!-- Featured Tags -->
-      {% include featured-tags.html %}
-
       <!-- Short About -->
       {% include short-about.html %}
 
-      <!-- Friends Blog -->
-      {% include friends.html %}
+      <!-- Featured Tags -->
+      {% include featured-tags.html %}
+
+      <!-- Friends Blog
+      {% include friends.html %} -->
 
       <!-- Ads -->
       <!--useless?-->
