rm friends and tag

--- a/_layouts/page.html
+++ b/_layouts/page.html
@@ -48,12 +48,14 @@ layout: default
       <!-- Featured Tags -->
       {% include featured-tags.html %}
 
-      <!-- Friends Blog
-      {% include friends.html %} -->
+      <!-- Friends Blog -->
+      <!-- rm "%" -->
+      <!-- { include friends.html } -->
 
       <!-- Ads -->
       <!--useless?-->
-      <!--{% include ads.html %}-->
+      <!-- rm "%" -->
+      <!-- { include ads.html } -->
     </div>
     {% endif %}
   </div>
