--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -105,10 +105,12 @@ layout: default
         class="col-lg-8 col-lg-offset-2 col-md-10 col-md-offset-1 sidebar-container"
       >
         <!-- Featured Tags -->
-        {% include featured-tags.html bottom=true %}
+        <!-- rm "%" -->
+        <!-- { include featured-tags.html bottom=true } -->
 
         <!-- Friends Blog -->
-        {% include friends.html %}
+        <!-- rm "%" -->
+        <!-- { include friends.html } -->
       </div>
     </div>
   </div>
