--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -66,6 +66,7 @@ layout: default
           data-theme="light"
           data-lang="zh-CN"
           data-loading="lazy"
+          data-strict="1"
           crossorigin="anonymous"
           async
         ></script>
