--- a/_layouts/keynote.html
+++ b/_layouts/keynote.html
@@ -64,6 +64,7 @@ layout: default
           data-theme="light"
           data-lang="zh-CN"
           data-loading="lazy"
+          data-strict="1"
           crossorigin="anonymous"
           async
         ></script>
