add notices according to License

--- a/_includes/ads.html
+++ b/_includes/ads.html
@@ -1,3 +1,9 @@
+<!--
+  update src
+
+  Modified by tLLWtG
+-->
+
 <script
   async
   src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-8547424531148298"
