--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -1,4 +1,12 @@
 <!-- Footer -->
+
+<!--
+    add busuanzi
+    update copyright
+
+    Modified by tLLWtG
+-->
+
 <footer>
     <div class="container">
         <div class="row">
