--- a/_includes/intro-header.html
+++ b/_includes/intro-header.html
@@ -1,3 +1,10 @@
+<!--
+    add header-mask
+    set random background
+
+    Modified by tLLWtG
+-->
+
 {% comment %}
     @param {string} type - 'page' | 'post' | 'keynote'
     @param {boolean} short
