--- a/_layouts/page.html
+++ b/_layouts/page.html
@@ -2,6 +2,13 @@
 layout: default
 ---
 
+<!--
+  add hitokoto
+  rm Friends Blog, Ads
+
+  Modified by tLLWtG
+-->
+
 <!-- Page Header -->
 {% include intro-header.html type='page' %}
 
