--- a/_includes/friends.html
+++ b/_includes/friends.html
@@ -1,5 +1,11 @@
+<!--
+  change text of h5
+
+  Modified by tLLWtG
+-->
+
 {% if site.friends %}
-<hr>
+<hr />
 <h5><del>单向</del>友情链接</h5>
 <ul class="list-inline">
   {% for friend in site.friends %}
