--- a/_includes/head.html
+++ b/_includes/head.html
@@ -1,3 +1,13 @@
+<!--
+  add:
+  Google tag (gtag.js)
+  google adsense
+  baidu tongji
+  baidu sousuoziyuanpingtai
+
+  Modified by tLLWtG
+-->
+
 <head>
   <meta charset="utf-8" />
   <meta http-equiv="X-UA-Compatible" content="IE=edge" />
