--- a/_includes/hitokoto.html
+++ b/_includes/hitokoto.html
@@ -1,3 +1,7 @@
+<!--
+  Created by tLLWtG
+-->
+
 <hr />
 <h5 style="display: inline">一言（ヒトコト）</h5>
 <div style="display: inline; font-size: 1.5em; color: #a3a3a3">
