--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -2,6 +2,13 @@
 layout: default
 ---
 
+<!--
+  add giscus
+  rm Friends Blog, Featured Tags
+
+  Modified by tLLWtG
+-->
+
 <!-- Image to hack wechat -->
 <!-- <img src="/img/icon_wechat.png" width="0" height="0"> -->
 <!-- <img src="{{ site.baseurl }}/{% if page.header-img %}{{ page.header-img }}{% else %}{{ site.header-img }}{% endif %}" width="0" height="0"> -->
