change some name to match package.json

--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -1,6 +1,7 @@
 <!-- Footer -->
 
 <!--
+    change some name to match package.json
     add busuanzi
     update copyright
 
@@ -51,7 +52,7 @@
 <script src="{{ " /js/bootstrap.min.js " | prepend: site.baseurl }}"></script>
 
 <!-- Custom Theme JavaScript -->
-<script src="{{ " /js/hux-blog.min.js " | prepend: site.baseurl }}"></script>
+<script src="{{ " /js/tllwtg-blog.min.js " | prepend: site.baseurl }}"></script>
 
 <!-- Simple Jekyll Search -->
 <script src="{{ " /js/simple-jekyll-search.min.js" | prepend: site.baseurl }}"></script>
