--- a/_includes/head.html
+++ b/_includes/head.html
@@ -1,4 +1,5 @@
 <!--
+  change some name to match package.json
   add:
   Google tag (gtag.js)
   google adsense
@@ -105,7 +106,7 @@
   site.baseurl }}">
 
   <!-- Custom CSS -->
-  <link rel="stylesheet" href="{{ " /css/hux-blog.min.css" | prepend:
+  <link rel="stylesheet" href="{{ " /css/tllwtg-blog.min.css" | prepend:
   site.baseurl }}">
 
   <!-- Custom Fonts -->
