--- a/less/tllwtg-blog.less
+++ b/less/tllwtg-blog.less
@@ -6,6 +6,12 @@
 @import "highlight.less";
 @import "search.less";
 
+/**
+ * change name to match package.json
+ *
+ * Modified by tLLWtG
+ */
+
 // Global Components
 
 body {
