--- a/_includes/head.html
+++ b/_includes/head.html
@@ -5,7 +5,8 @@
   google adsense
   baidu tongji
   baidu sousuoziyuanpingtai
-
+  my-face.css
+  
   Modified by tLLWtG
 -->
 
@@ -108,6 +109,10 @@
   <!-- Custom CSS -->
   <link rel="stylesheet" href="{{ " /css/tllwtg-blog.min.css" | prepend:
   site.baseurl }}">
+
+  <!-- my-face CSS -->
+  <link rel="stylesheet" href="{{ " /css/my-face.css" | prepend: site.baseurl
+  }}">
 
   <!-- Custom Fonts -->
   <!-- <link href="http://maxcdn.bootstrapcdn.com/font-awesome/4.3.0/css/font-awesome.min.css" rel="stylesheet" type="text/css"> -->
